# graphiti

./: .gitignore  .mcp.json
.github/workflows/: graph-explorer-e2e.yml
graph_explorer/: .gitignore  README.md  run.sh
graph_explorer/backend/: .env.example  app.py  db.py  graph.py  pyproject.toml  search.py
graph_explorer/frontend/: index.html  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  railway.json  vite.config.ts
graph_explorer/frontend/e2e/: explorer.spec.ts
graph_explorer/frontend/src/: App.tsx  api.ts  colors.ts  styles.css  types.ts
graph_explorer/frontend/src/components/: DetailDialog.tsx  FactsPanel.tsx  GraphView.tsx  Legend.tsx  SearchBar.tsx
mcp_server/: .env.example  README.md  ingest_ontology.py
mcp_server/config/: config-docker-falkordb-combined.yaml  config-docker-falkordb.yaml  config-docker-neo4j.yaml  config.yaml  ontology.json
mcp_server/docker/: README-falkordb-combined.md
mcp_server/src/: graphiti_mcp_server.py
mcp_server/src/config/: schema.py
mcp_server/src/models/: edge_types.py  entity_types.py
mcp_server/src/services/: factories.py
mcp_server/src/utils/: scope.py
mcp_server/tests/: test_core_parity.py
