[project]
name = "graph-explorer-backend"
version = "0.1.0"
description = "Standalone read-only API that serves the Graphiti knowledge graph for visualization"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "graphiti-core[falkordb]>=0.29.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
